option('enable-binaries',
  type : 'boolean',
  value : true,
  description : 'Enable binaries.',
)
option('enable-binary-tests',
  type : 'boolean',
  value : true,
  description : 'Enable binary tests.',
)
option('enable-binary-clis',
  type : 'boolean',
  value : true,
  description : 'Enable binary clis.',
)

