##subdir('c_deps/meson/osx')
#subdir('c_deps/meson/deps/cargs')
#subdir('c_deps/meson/deps/module')
#subdir('c_deps/meson/deps/str-flatten.c')
#subdir('c_deps/meson/deps/strdup')
#subdir('c_deps/meson/deps/vt100utils')
#subdir('c_deps/meson/deps/uuid4')
#subdir('c_deps/meson/deps/asprintf')
#subdir('c_deps/meson/deps/progress')
#subdir('c_deps/meson/deps/wildcardcmp')
#subdir('c_deps/meson/deps/tempdir')
#subdir('c_deps/meson/deps/c_string_buffer')
#subdir('c_deps/meson/deps/c_stringfn')
#subdir('c_deps/meson/deps/c_fsio')
#subdir('c_deps/meson/deps/c_forever')
subdir('c_deps/meson/deps/parson')
#subdir('c_deps/meson/deps/bytes')
subdir('c_deps/meson/deps/c_greatest')
subdir('c_deps/meson/deps/debug-memory')
#subdir('c_deps/meson/deps/log.h')
#subdir('c_deps/meson/deps/timestamp')
#subdir('c_deps/meson/deps/c_dbg')
#subdir('c_deps/meson/deps/env.h')
#subdir('c_deps/meson/deps/throw.h')
#subdir('c_deps/meson/deps/ms')
#subdir('c_deps/meson/deps/hidapi')
#subdir('c_deps/submodules/c_ansi/ansi-codes')
